<resources>
    <string name="app_name">RATAR</string>
    <string name="email_label">Enter Email</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="pass_label">Enter Password</string>
    <string name="login_page">Already have an account? <bold>Login</bold></string>
    <string name="login_link">Login</string>
    <string name="login_btn">Login</string>
    <string name="welcome_label">Welcome,</string>
    <string name="userField">Enter username</string>
    <string name="private_broadcasting_app_id">6fbc95615707434392c85cff827b9d54</string>


    <string name="hello_label">Hello there,</string>
    <string name="forgot_label">Forgot password? Reset</string>
    <string name="create_account">Need an account? Sign Up</string>
    <string name="title_activity_forum">ForumActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>