<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_constraintCircleRadius="@dimen/cardview_default_radius"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:background="@drawable/box1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="353dp"
                android:background="#000000"
                android:fontFamily="@font/roboto_black_italic"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/welcome_label"
                android:textColor="@color/white"
                android:textSize="55sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/emailField"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""

        android:background="@drawable/box"
        android:elevation="8dp"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:shadowColor="#FFFFFF"
        android:textColorHint="#706969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userField"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/passField"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:elevation="8dp"
        android:hint="@string/pass_label"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#706969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="296dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_btn"
        app:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="68dp"
        android:text="@string/login_page"
        android:textColor="#130101"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userField"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/userField"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#706969"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>